# ACES

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  config_str_language.md  conftest.py  load_data.ipynb  pyproject.toml  result.csv  run.py  run.yaml  run_example.ipynb  run_tests.ipynb  sample.yaml  sample_config.yaml  simple_test_runner.py  task_querying_v2.py  terminology.md  test_01.yaml  test_runner.py  tutorial.ipynb
.github/actions/setup/: action.yaml
.github/workflows/: ci.yml  code-quality-main.yaml  code-quality-master.yaml  code-quality-pr.yaml  python-build.yaml  python-building.yaml  tests.yaml  tests.yml
.logs/inhospital-mortality_2024-06-03_06-04-14/.hydra/: config.yaml  hydra.yaml  overrides.yaml
conf/: sample.yaml
docs/: conf.py  requirements.txt
docs/source/: algorithm.md  api.rst  conf.py  config.rst  configuration.md  description.md  examples.md  index.md  index.rst  license.md  overview.md  profiling.md  technical.md  terminology.md  usage.md  usage.rst
docs/source/notebooks/: examples.ipynb  predicates.ipynb  tutorial.ipynb  tutorial_esgpt.ipynb  tutorial_meds.ipynb
docs/source/tutorial/: index.md
profiling/: profiling_config.yaml  run_profiling.py  run_profiling_threads.py
profiling/inovalon/: run_profiling.py  run_profiling_sbatch.sh  run_profiling_threads.py
profiling/inovalon/profiling_config/: profile_based_on_num_criteria_4.yaml  profile_based_on_num_predicates_2.yaml  profile_based_on_num_windows_in_parallel_16.yaml  profile_based_on_num_windows_in_parallel_2.yaml  (+3 more)
profiling/mimic/: run_profiling.py  run_profiling_threads.py
sample_configs/: 01-inhospital-mortality.yaml  02-abnormal-lab.yaml  02-abnormal_lab.yaml  03-imminent-mortality.yaml  04-readmission-risk.yaml  04-readmission_risk.yaml  05-intervention-weaning.yaml  05-intervention_weaning.yaml  06-long-term-incidence.yaml  06-long_term-incidence.yaml  06-long_term_incidence.yaml  07-intubation-onset.yaml  07-intubation_onset.yaml  08-HF_prediction.yaml  08-HF_prediction_cases.yaml  08-heart-failure-cases.yaml  09-HF_prediction_controls.yaml  09-heart-failture-controls.yaml  10-long-length-of-stay.yaml  HF_prediction.yaml  abnormal-lab.yaml  abnormal_lab.yaml  heart-failure-cases.yaml  imminent_mortality.yaml  inhospital-mortality.yaml  inhospital_mortality.yaml  intervention_weaning.yaml  intubation-onset.yaml  intubation_onset.yaml  long-term-incidence.yaml  long_term_incidence.yaml  long_term_recurrence.yaml  outlier_detection.yaml  readmission-risk.yaml  readmission_risk.yaml
sample_data/: sample.csv  sample_data.csv
sample_data/esgpt_sample/: E.pkl  config.json  dynamic_measurements_df.parquet  events_df.parquet  inferred_measurement_configs.json  vocabulary_config.json
sample_data/meds_sample/: sample_shard.parquet
scripts/: run_extraction.py
src/aces/: README.md  __init__.py  __main__.py  aggregate.py  aggregate.pyi  config.py  config.pyi  config.yaml  constraints.py  constraints.pyi  expand_shards.py  extract_subtree.py  extract_subtree.pyi  predicates.py  predicates.pyi  query.py  query.pyi  run.py  types.py  types.pyi  utils.py  utils.pyi
src/esgpt_task_querying/: aggregate.py  config.py  constraints.py  event_predicates.py  extract_subtree.py  main.py  predicates.py  query.py  summarize.py  task_querying.py  types.py  utils.py
static/: refs.bib
test/: test_e2e.py
tests/: test_01.yaml  test_02.yaml  test_03.yaml  test_04.yaml  test_05.yaml  test_06.yaml  test_07.yaml  test_aggregate_hypothesis.py  test_any_event_excludes_birth.py  test_check_static_variables.py  test_config.py  test_e2e.py  test_expand_shards.py  test_extract_subtree_idempotency.py  test_help_message.py  test_meds.py  test_other_meds.py  test_override_meds.py  test_predicates.py  test_query.py  test_summarize.py  test_task_querying.py  utils.py
to_organize/: TODO.md  run_profiling.py  run_profiling_threads.py  run_prompt.ipynb  run_tests.ipynb  run_validation.ipynb  sample_data.csv  simple_test_runner.py  subject_0.csv  task_querying_v2.py
to_organize/inovalon/: abnormal_lab.yaml  profile_based_on_num_criteria_8.yaml  profile_based_on_num_predicates_4.yaml  profile_based_on_num_predicates_8.yaml  profile_based_on_num_windows_in_parallel_0.yaml  profile_based_on_num_windows_in_parallel_1.yaml  profile_based_on_num_windows_in_series_1.yaml  readmission_risk.yaml  run_profiling.py  run_profiling_threads.py
to_organize/profiling_output/: profile_based_on_num_criteria_results.csv  profile_based_on_num_predicates_results.csv  profile_based_on_num_threads_results.csv  profile_based_on_num_windows_in_parallel_results.csv  profile_based_on_num_windows_in_series_results.csv  profile_based_on_original_rows_results.csv  profile_based_on_task_results.csv  profiling_result.pkl
to_organize/temp/: esgpt-api.ipynb  sample_data.csv
to_organize/test_configs/: gpt.yaml  imminent_mortality.yaml  inhospital_mortality.yaml  profile_based_on_num_criteria_0.yaml  profile_based_on_num_criteria_1.yaml  profile_based_on_num_criteria_16.yaml  profile_based_on_num_criteria_2.yaml  profile_based_on_num_criteria_4.yaml  profile_based_on_num_criteria_8.yaml  profile_based_on_num_predicates_0.yaml  profile_based_on_num_predicates_1.yaml  profile_based_on_num_predicates_2.yaml  profile_based_on_num_predicates_4.yaml  profile_based_on_num_predicates_8.yaml  profile_based_on_num_threads.yaml  profile_based_on_num_windows_in_parallel_0.yaml  profile_based_on_num_windows_in_parallel_1.yaml  profile_based_on_num_windows_in_parallel_16.yaml  profile_based_on_num_windows_in_parallel_2.yaml  profile_based_on_num_windows_in_parallel_4.yaml  profile_based_on_num_windows_in_parallel_8.yaml  profile_based_on_num_windows_in_series_1.yaml  profile_based_on_num_windows_in_series_16.yaml  profile_based_on_num_windows_in_series_2.yaml  profile_based_on_num_windows_in_series_4.yaml  profile_based_on_num_windows_in_series_8.yaml  readmission_risk.yaml  test_01.yaml  test_03.yaml  test_05.yaml  test_07.yaml  test_08.yaml
tutorial/: example.ipynb
validation/: run_validation.ipynb
(+77 files in other folders)
