[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "es-aces"
dynamic = ["version"]
authors = [
  { name="Justin Xu", email="justin13601@hotmail.com" },
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "ACES: Automatic Cohort Extraction System for Event-Streams"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars ~= 1.27.1",
    "numpy < 1.29.0",
    "bigtree == 0.18.*",
    "ruamel.yaml == 0.18.*",
    "hydra-core ~= 1.3.2",
    "pytimeparse == 1.1.*",
    "networkx == 3.3.*",
    "pyarrow == 17.*",
    "meds == 0.3.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
your_package = ["*.pyi", "py.typed"]

[tool.setuptools_scm]

[project.scripts]
aces-cli = "aces.run:main"
expand_shards = "aces.expand_shards:main"

[project.optional-dependencies]
dev = [
  "pre-commit<4", "pytest", "pytest-cov", "pytest-subtests", "rootutils", "hypothesis"
]
profiling = ["psutil"]

[project.urls]
Homepage = "https://github.com/justin13601/ACES"
Issues = "https://github.com/justin13601/ACES/issues"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--doctest-modules",
  "--ignore=docs",
  "--doctest-glob=*.md",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
