[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "es-aces"
dynamic = ["version"]
authors = [
  { name="Justin Xu", email="justin13601@hotmail.com" },
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "ACES: Automatic Cohort Extraction System for Event-Streams"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars ~= 1.27.1",
    "numpy < 1.29.0",
    "bigtree == 0.18.*",
    "ruamel.yaml == 0.18.*",
    "hydra-core ~= 1.3.2",
    "pytimeparse == 1.1.*",
    "networkx == 3.3.*",
    "pyarrow == 17.*",
    "meds ~= 0.4.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
your_package = ["*.pyi", "py.typed"]

[tool.setuptools_scm]

[project.scripts]
aces-cli = "aces.run:cli"
expand_shards = "aces.expand_shards:main"

[project.optional-dependencies]
dev = ["pre-commit<4", "ruff"]
tests = ["pytest", "pytest-cov", "pytest-subtests", "hypothesis"]
profiling = ["psutil"]

[project.urls]
Homepage = "https://github.com/justin13601/ACES"
Issues = "https://github.com/justin13601/ACES/issues"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--doctest-modules",
  "--ignore=docs",
  "--doctest-glob=*.md",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.coverage.report]
exclude_also = ["logger\\.debug", "except ImportError:", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py311"
line-length = 110

# Enable linters
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "N",   # pep8-naming
]
ignore = ["DTZ001", "DTZ005"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["*_N_*", "ESD", "MEDS_*", "ESGPT_*", "*_DAG"]
