[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "es-aces"
dynamic = ["version"]
authors = [
  { name="Justin Xu", email="justin13601@hotmail.com" },
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "ACES: Automatic Cohort Extraction System for Event-Streams"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Polars / MEDS: ceilings relaxed so downstream MEDS tooling (MEDS-Transforms,
    # MEDS-Extract, MEDS_trajectory_evaluation, etc.) can co-install without being
    # pinned to the exact 1.30 / 0.4 release. Doctests are still written against
    # polars 1.30's expression repr, so when a newer polars changes that repr the
    # doctests will need updating — tracked in
    # https://github.com/justin13601/ACES/issues/201.
    "polars >= 1.30, < 2",
    "meds >= 0.4, < 0.6",
    # Numeric / arrow: loose floors only. numpy 1.26 is the oldest version that ships
    # wheels for py 3.12+ (earlier versions need distutils at build time).
    "numpy >= 1.26",
    "pyarrow >= 15",
    # Config / CLI: hydra's CLI surface has been stable across 1.3.x. Keep 1.3.x lower
    # bound (resolver bugs in 1.3.0 were fixed in 1.3.2) but allow any future patch.
    "hydra-core >= 1.3.2, < 2",
    # Graph / tree / YAML / time: only narrow, long-stable API surface is used. Floors
    # picked so that every symbol actually referenced in src/aces is present.
    "networkx >= 3.1, < 4",       # write_network_text was added in 3.1
    "bigtree >= 0.14, < 1",       # Node, preorder_iter, print_tree have been stable since 0.14
    "ruamel.yaml >= 0.17, < 1",   # YAML(typ="safe", pure=True) API unchanged since 0.17
    "pytimeparse >= 1.1.8, < 2",  # effectively only 1.1.8 works (earlier releases lack top-level parse)
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
your_package = ["*.pyi", "py.typed"]

[tool.setuptools_scm]

[project.scripts]
aces-cli = "aces.run:cli"
expand_shards = "aces.expand_shards:main"

[project.optional-dependencies]
profiling = ["psutil >= 5.9"]

[dependency-groups]
dev = [
    "pre-commit >= 4.5, < 5",
    "ruff >= 0.15, < 1",
    "pytest >= 8.4, < 10",
    "pytest-cov >= 7, < 8",
    "pytest-subtests >= 0.15, < 1",
    "hypothesis >= 6.150, < 7",
]

[project.urls]
Homepage = "https://github.com/justin13601/ACES"
Issues = "https://github.com/justin13601/ACES/issues"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--doctest-modules",
  "--ignore=docs",
  "--doctest-glob=*.md",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.coverage.report]
exclude_also = ["logger\\.debug", "except ImportError:", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py311"
line-length = 110

# Enable linters
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "N",   # pep8-naming
]
ignore = ["DTZ001", "DTZ005"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["*_N_*", "ESD", "MEDS_*", "ESGPT_*", "*_DAG"]
